[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.12549, 0.12549, 0.513726 )

[node name="PauseContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseContainer"]
margin_left = 118.0
margin_top = 23.0
margin_right = 201.0
margin_bottom = 157.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="PauseContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
text = "Paused"
align = 1
valign = 1

[node name="ResumeBtn" type="Button" parent="PauseContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
focus_neighbour_top = NodePath("../MainMenuBtn")
text = "Resume"

[node name="SoundsBtn" type="Button" parent="PauseContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 83.0
margin_bottom = 74.0
text = "Sounds"

[node name="ControlsBtn" type="Button" parent="PauseContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 83.0
margin_bottom = 104.0
text = "Controls"

[node name="MainMenuBtn" type="Button" parent="PauseContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 83.0
margin_bottom = 134.0
focus_neighbour_bottom = NodePath("../ResumeBtn")
text = "Main Menu"

[node name="SoundsContainer" type="CenterContainer" parent="."]
visible = false
margin_left = 96.0
margin_top = 23.0
margin_right = 222.0
margin_bottom = 175.0

[node name="VBoxContainer" type="VBoxContainer" parent="SoundsContainer"]
margin_left = 11.0
margin_right = 114.0
margin_bottom = 152.0

[node name="SoundsLabel" type="Label" parent="SoundsContainer/VBoxContainer"]
margin_right = 46.0
margin_bottom = 14.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Sounds Controls"

[node name="MasterLabel" type="Label" parent="SoundsContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 46.0
margin_bottom = 32.0
text = "Master"
align = 1

[node name="Master" type="HSlider" parent="SoundsContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 46.0
margin_bottom = 52.0
focus_neighbour_top = NodePath("../Back")
min_value = -80.0
max_value = 0.0

[node name="MusicLabel" type="Label" parent="SoundsContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 46.0
margin_bottom = 70.0
text = "Music"
align = 1

[node name="Music" type="HSlider" parent="SoundsContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 46.0
margin_bottom = 90.0
min_value = -80.0
max_value = 0.0

[node name="EffectsLabel" type="Label" parent="SoundsContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 46.0
margin_bottom = 108.0
text = "Effects"
align = 1

[node name="Effects" type="HSlider" parent="SoundsContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 46.0
margin_bottom = 128.0
min_value = -80.0
max_value = 0.0

[node name="Back" type="Button" parent="SoundsContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 46.0
margin_bottom = 152.0
focus_neighbour_bottom = NodePath("../Master")
text = "Back"

[node name="RestartContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="RestartContainer"]
margin_left = 29.0
margin_top = 62.0
margin_right = 290.0
margin_bottom = 117.0

[node name="RestartLabel" type="Label" parent="RestartContainer/VBoxContainer"]
margin_right = 261.0
margin_bottom = 31.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "This will restart your adventure,
do you wish to return to the main menu?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RestartContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 261.0
margin_bottom = 55.0
alignment = 1

[node name="Yes" type="Button" parent="RestartContainer/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 130.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../No")
text = "Yes"

[node name="No" type="Button" parent="RestartContainer/VBoxContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 164.0
margin_bottom = 20.0
focus_neighbour_right = NodePath("../Yes")
text = "No"

[node name="ControlsContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsContainer"]
margin_left = 80.0
margin_top = 20.0
margin_right = 239.0
margin_bottom = 160.0

[node name="ControlsLabel" type="Label" parent="ControlsContainer/VBoxContainer"]
margin_right = 155.0
margin_bottom = 116.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Controls"
align = 1

[node name="Controls" type="Label" parent="ControlsContainer/VBoxContainer"]
margin_right = 159.0
margin_bottom = 99.0
text = "Up: W or Up Arrow
Down: S or Down Arrow
Left: A or Left Arrow
Right: D or Right Arrow
Roll: K or Space Bar or Z
Attack: J or Left Click or X"
align = 1

[node name="BackBtn" type="Button" parent="ControlsContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 42.0
margin_bottom = 110.0
focus_neighbour_bottom = NodePath("../Master")
text = "Back"

[connection signal="pressed" from="PauseContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/SoundsBtn" to="." method="_on_SoundsBtn_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/ControlsBtn" to="." method="_on_ControlsBtn_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
[connection signal="value_changed" from="SoundsContainer/VBoxContainer/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="SoundsContainer/VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="SoundsContainer/VBoxContainer/Effects" to="." method="_on_Effects_value_changed"]
[connection signal="pressed" from="SoundsContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="RestartContainer/VBoxContainer/HBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="RestartContainer/VBoxContainer/HBoxContainer/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="ControlsContainer/VBoxContainer/BackBtn" to="." method="_on_Back_pressed"]
